Aplicando folha de estilo com sass

--- a/Lab_2/css/input.scss
+++ b/Lab_2/css/input.scss
@@ -11,5 +11,12 @@
 
     pre{
         font-size: 3em;
-    }
+    }    
+}
+.btn{
+    background: #0069D9;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 10;
+    font-family: Arial, Helvetica, sans-serif;    
 }
