Aplicando metodologia OOCSS - Object Oriented CSS

--- a/Lab_2/css/output.css
+++ b/Lab_2/css/output.css
@@ -14,11 +14,12 @@
 }
 
 .btn {
-  background: #0069D9;
   height: 40px;
   border-radius: 10px;
   font-size: 10;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/*# sourceMappingURL=output.css.map */
+.btn-blue {
+  background: #0069D9;
+}
