--- a/Lab_2/css/input.scss
+++ b/Lab_2/css/input.scss
@@ -13,10 +13,12 @@
         font-size: 3em;
     }    
 }
-.btn{
-    background: #0069D9;
+.btn{    
     height: 40px;
     border-radius: 10px;
     font-size: 10;
     font-family: Arial, Helvetica, sans-serif;    
+}
+.btn-blue{
+    background: #0069D9;
 }
